compiler/src/test/resources/golden/errors/suggest_fn.dawn
fn compute(x: Int) -> Int = x

fn f() -> Int = computa(3)
