compiler/src/test/resources/golden/errors/suggest_fn.err
error: undefined function: computa
  --> suggest_fn.dawn:3:17
  |
3 | fn f() -> Int = computa(3)
  |                 ^^^^^^^
  = hint: did you mean `compute`?
